// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetNode renders a changesetplan 1`] = `
<li
  className="list-group-item e2e-changeset-node"
>
  <div
    className="campaign-node__content flex-fill"
  >
    <div
      className="d-flex align-items-center m-1"
    >
      <div
        className="flex-shrink-0 flex-grow-0 my-1 mr-1"
      >
        <SourcePullIcon
          className="text-success"
          data-tooltip="open"
        />
      </div>
      <div
        className="campaign-node__content flex-fill"
      >
        <h3
          className="m-0"
        >
          <a
            className="text-muted"
            href="github.com/sourcegraph/sourcegraph"
            rel="noopener noreferrer"
            target="_blank"
          >
            sourcegraph
          </a>
           
          <span
            className="mx-1"
          />
           
        </h3>
      </div>
      <span
        className="flex-shrink-0 flex-grow-0"
      >
        <div
          className="diff-stat "
          data-tooltip="100 additions, 200 changes, 100 deletions"
        >
          <span
            className="diff-stat__total font-weight-bold"
          >
            <span
              className="diff-stat__text-added mr-1"
            >
              +
              100
            </span>
            <span
              className="diff-stat__text-changed mr-1"
            >
              •
              200
            </span>
            <span
              className="diff-stat__text-deleted mr-1"
            >
              −
              100
            </span>
          </span>
          <div
            className="diff-stat__square diff-stat__added"
          />
          <div
            className="diff-stat__square diff-stat__changed"
          />
          <div
            className="diff-stat__square diff-stat__changed"
          />
          <div
            className="diff-stat__square diff-stat__changed"
          />
          <div
            className="diff-stat__square diff-stat__deleted"
          />
        </div>
      </span>
    </div>
  </div>
</li>
`;

exports[`ChangesetNode renders an externalchangeset 1`] = `
<li
  className="list-group-item e2e-changeset-node"
>
  <div
    className=""
  >
    <div
      className="d-flex justify-content-between align-items-center position-relative "
    >
      <span
        className="campaign-node__content flex-fill"
      >
        <div
          className="d-flex align-items-center m-1"
        >
          <div
            className="flex-shrink-0 flex-grow-0 my-1 mr-1"
          >
            <SourcePullIcon
              className="text-success"
              data-tooltip="open"
            />
          </div>
          <div
            className="flex-shrink-0 flex-grow-0 ml-1 mr-3"
          >
            <AccountQuestionIcon
              className="text-warning"
              data-tooltip="pending review"
            />
          </div>
          <div
            className="campaign-node__content flex-fill"
          >
            <h3
              className="m-0"
            >
              <a
                className="text-muted"
                href="github.com/sourcegraph/sourcegraph"
                rel="noopener noreferrer"
                target="_blank"
              >
                sourcegraph
              </a>
               
              <span
                className="mx-1"
              />
               
              <a
                className=""
                href="https://github.com/sourcegraph/sourcegraph/pull/111111"
                rel="noopener noreferrer"
                target="_blank"
              >
                Remove lodash
              </a>
            </h3>
            <div
              className="text-truncate markdown"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "We should remove lodash
",
                }
              }
            />
          </div>
          <span
            className="flex-shrink-0 flex-grow-0"
          >
            <div
              className="diff-stat "
              data-tooltip="100 additions, 200 changes, 100 deletions"
            >
              <span
                className="diff-stat__total font-weight-bold"
              >
                <span
                  className="diff-stat__text-added mr-1"
                >
                  +
                  100
                </span>
                <span
                  className="diff-stat__text-changed mr-1"
                >
                  •
                  200
                </span>
                <span
                  className="diff-stat__text-deleted mr-1"
                >
                  −
                  100
                </span>
              </span>
              <div
                className="diff-stat__square diff-stat__added"
              />
              <div
                className="diff-stat__square diff-stat__changed"
              />
              <div
                className="diff-stat__square diff-stat__changed"
              />
              <div
                className="diff-stat__square diff-stat__changed"
              />
              <div
                className="diff-stat__square diff-stat__deleted"
              />
            </div>
          </span>
        </div>
      </span>
      <button
        aria-label="Expand section"
        className="btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-label="Expand section"
          className="mdi-icon icon-inline"
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</li>
`;
